# ai-agents

./: README.md
.devcontainer/: devcontainer.json
00_demo/: agent_config.py  agents.ipynb  context_and_history.py  custom_span.py  customer_support.py  data_processing.py  dynamic_instructions.py  error.py  handoff.py  input_guardrails.py  main.py  multi_agent.py  output_guardrails.py  practice.py  pydant.py  pyproject.toml  requirements.txt  run_stream.py
01_hello_agent/: main.py  pyproject.toml
02_cinepile_agent/: .gitignore  main.py  pyproject.toml
03_cinepile_agent_with_chainlit/: Procfile  main.py  pyproject.toml
04_inner_working_agent_sdk/: main.py  pyproject.toml
05_open_router_and_litellm/: app.py  main.py  pyproject.toml  requirements.txt
06_agent_tools_and_handsoff/: .gitignore  main.py  pyproject.toml  requirements.txt
Projects/atm_machine_agent/: accounts.json  app.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
Projects/personal_blog_agent_with_fastapi/: blogs.db  main.py  pyproject.toml  requirements.txt
Projects/personal_blog_agent_with_fastapi/blog_agent/: main.py
Projects/personal_blog_agent_with_fastapi/blog_api/: main.py
Projects/personal_blog_agent_with_fastapi/blog_api/blogs/: actions.py  main.py
Projects/personal_blog_agent_with_fastapi/utils/: database.py  models.py  schemas.py
Projects/task_manager_agent_with_fastapi/: aitask.db  main.py  pyproject.toml
Projects/task_manager_agent_with_fastapi/app/: tools.py
Projects/task_manager_agent_with_fastapi/utils/: database.py
(+61 files in other folders)
