[project]
name = "atm-machine-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "openai-agents[litellm]>=0.2.3",
    "pydantic>=2.11.7",
    "streamlit>=1.47.1",
    "streamlit-option-menu>=0.4.0",
]
